yamls/stirling-pdf/stirling-pdf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: homeserver-pdf.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf-stirling-pdf-chart
                port:
                  number: 8080
