yamls/stirling-pdf/stirling-pdf-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-tailscale-ingress
  namespace: stirling-pdf 
spec:
  defaultBackend:
    service:
      name: stirling-pdf-stirling-pdf-chart
      port:
        number: 8080
  tls:
    - hosts:
        - pdf
  ingressClassName: tailscale
